# esp-idf

./: README.md
components/driver/uart/: uart.c
components/esp32/: cpu_start.c
components/esp_common/: CMakeLists.txt
components/esp_common/src/: task_wdt.c
components/esp_driver_uart/src/: uart.c
components/esp_eth/src/: esp_eth_phy_lan8720.c
components/esp_event/: esp_event.c
components/esp_http_client/: esp_http_client.c
components/esp_https_ota/include/: esp_https_ota.h
components/esp_https_ota/src/: esp_https_ota.c
components/esp_wifi/: CMakeLists.txt
components/mbedtls/port/dynamic/: esp_mbedtls_dynamic_impl.c
components/perfmon/: CMakeLists.txt
components/protocomm/include/security/: protocomm_security.h
components/protocomm/include/transports/: protocomm_ble.h
components/protocomm/src/common/: protocomm.c
components/protocomm/src/transports/: protocomm_nimble.c
components/tcp_transport/: transport.c  transport_ssl.c  transport_tcp.c  transport_ws.c
components/wifi_provisioning/: CMakeLists.txt
components/wifi_provisioning/include/wifi_provisioning/: manager.h  wifi_config.h
components/wifi_provisioning/python/: wifi_config_pb2.py  wifi_constants_pb2.py  wifi_scan_pb2.py
components/wifi_provisioning/src/: handlers.c  manager.c  wifi_config.c  wifi_provisioning_priv.h
components/wpa_supplicant/include/utils/: wpa_debug.h
tools/: idf_tools.py
